appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      text: "Cereal"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to Cereal accordion"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Cereal accordion is displayed"

- assertVisible:
    text: "Cereal"
    label: "Cereal accordion title is displayed"


- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Expand Cereal accordion"


- runFlow:
    file: "grainOrCereal-items/spaghetti-visible.yaml"
    env:
      ITEM_INDEX: "0"

- runFlow:
    file: "grainOrCereal-items/tacoShells-visible.yaml"
    env:
      ITEM_INDEX: "1"

- runFlow:
    file: "grainOrCereal-items/flour-visible.yaml"
    env:
      ITEM_INDEX: "2"

- runFlow:
    file: "grainOrCereal-items/croutons-visible.yaml"
    env:
      ITEM_INDEX: "3"

- runFlow:
    file: "grainOrCereal-items/pizzaDough-visible.yaml"
    env:
      ITEM_INDEX: "4"

- runFlow:
    file: "grainOrCereal-items/pasta-visible.yaml"
    env:
      ITEM_INDEX: "5"

- runFlow:
    file: "grainOrCereal-items/sushiRice-visible.yaml"
    env:
      ITEM_INDEX: "6"


- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Collapse Cereal accordion"


- evalScript: ${output.accordionIndex = output.accordionIndex + 1}
