appId: "com.recipedia"
---
- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Cereal accordion is displayed"

- assertVisible:
    text: "Cereal"
    label: "Cereal accordion title is displayed"

# Expand the accordion
- tapOn:
    text: "Cereal"
    label: "Expand Cereal accordion"

- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::${1+output.accordionIndex}"
    direction: DOWN
    speed: 60
    label: "Scroll to the next accordion to ensure all elements are displayed"


# Initialize counter for visible items
- evalScript: ${output.itemIndex = 0}

# Item: Spaghetti
- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Spaghetti')!== undefined}
    file: "grainOrCereal-items/spaghetti-visible.yaml"
    env:
      ITEM_INDEX: ${output.itemIndex}

- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Spaghetti')=== undefined}
    file: "grainOrCereal-items/spaghetti-hidden.yaml"

# Item: Taco Shells
- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Taco Shells')!== undefined}
    file: "grainOrCereal-items/tacoShells-visible.yaml"
    env:
      ITEM_INDEX: ${output.itemIndex}

- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Taco Shells')=== undefined}
    file: "grainOrCereal-items/tacoShells-hidden.yaml"

# Item: Flour
- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Flour')!== undefined}
    file: "grainOrCereal-items/flour-visible.yaml"
    env:
      ITEM_INDEX: ${output.itemIndex}

- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Flour')=== undefined}
    file: "grainOrCereal-items/flour-hidden.yaml"

# Item: Croutons
- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Croutons')!== undefined}
    file: "grainOrCereal-items/croutons-visible.yaml"
    env:
      ITEM_INDEX: ${output.itemIndex}

- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Croutons')=== undefined}
    file: "grainOrCereal-items/croutons-hidden.yaml"

# Item: Pizza Dough
- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Pizza Dough')!== undefined}
    file: "grainOrCereal-items/pizzaDough-visible.yaml"
    env:
      ITEM_INDEX: ${output.itemIndex}

- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Pizza Dough')=== undefined}
    file: "grainOrCereal-items/pizzaDough-hidden.yaml"

# Item: Pasta
- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Pasta')!== undefined}
    file: "grainOrCereal-items/pasta-visible.yaml"
    env:
      ITEM_INDEX: ${output.itemIndex}

- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Pasta')=== undefined}
    file: "grainOrCereal-items/pasta-hidden.yaml"

# Item: Sushi Rice
- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Sushi Rice')!== undefined}
    file: "grainOrCereal-items/sushiRice-visible.yaml"
    env:
      ITEM_INDEX: ${output.itemIndex}

- runFlow:
    when:
      true: ${VISIBLE_ITEMS.split(',').find(item => item === 'Sushi Rice')=== undefined}
    file: "grainOrCereal-items/sushiRice-hidden.yaml"

# Collapse the accordion back
- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Collapse Cereal accordion"

# Increment accordion index for next accordion
- evalScript: ${output.accordionIndex = output.accordionIndex + 1}
