appId: "com.recipedia"
---
# Assert accordion is displayed
- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Legumes accordion is displayed"

- assertVisible:
    text: "Legumes"
    label: "Legumes accordion title is displayed"

# Expand the accordion
- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Expand Legumes accordion"

# Assert all items are visible
- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::0"
    label: "Black Beans filter is visible"

# Collapse the accordion back
- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Collapse Legumes accordion"

# Increment accordion index for next accordion
- evalScript: ${output.accordionIndex = output.accordionIndex + 1}
