appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      text: "Meat"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to meat accordion"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Meat accordion is displayed"

- assertVisible:
    text: "Meat"
    label: "Meat accordion title is displayed"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Expand Meat accordion"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::0"
    label: "Beef filter is visible"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Collapse Meat accordion"

- evalScript: ${output.accordionIndex = output.accordionIndex + 1}
