appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to nuts and seeds accordion"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    text: "Nuts and Seeds"
    label: "Nuts and Seeds accordion is displayed"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Expand Nuts and Seeds accordion"

- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::0"
    direction: DOWN
    label: "Scroll down to ensure Sesame Seeds is rendered"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::0"
    label: "Sesame Seeds filter is visible"

- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    direction: UP
    label: "Scroll back up to Nuts and Seeds accordion header"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Collapse Nuts and Seeds accordion"

- evalScript: ${output.accordionIndex = output.accordionIndex + 1}
