appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll until Oil and Fat accordion is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    text: "Oil and Fat"
    label: "Oil and Fat accordion is displayed"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Expand Oil and Fat accordion"

- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::0"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll until Oil and Fat  last item is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::0"
    label: "Butter filter is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::1"
    label: "Olive Oil filter is visible"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Collapse Oil and Fat accordion"

- evalScript: ${output.accordionIndex = output.accordionIndex + 1}
